# Agentic-Studio

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/dashboard/: next.config.ts  package-lock.json  package.json  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/scripts/: verify-dashboard.mjs
docs/: agents.md  api.md  architecture.md  dashboard.md  deployment.md  evals.md  memory.md  routing.md
examples/briefs/: privacy_notes.json
scripts/: count_real_lines.py  generate_project.py  run_demo.py  seed_kb.py
src/marketing_swarm/: __init__.py
src/marketing_swarm/agents/: __init__.py  analytics_optimization.py  base.py  brand_voice_qa.py  competitive_intelligence.py  content_strategy.py  copywriter.py  creative_brief.py  email_marketing.py  market_research.py  seo_geo.py  social_media.py  supervisor.py
src/marketing_swarm/api/: app.py
src/marketing_swarm/cli/: app.py
src/marketing_swarm/config/: model_registry.py  routing_tables.py  settings.py
src/marketing_swarm/evals/: datasets.py  harness.py  scorers.py
src/marketing_swarm/guardrails/: injection.py  pii.py  policy.py  validator.py
src/marketing_swarm/knowledge/: __init__.py  chunking.py  index.py  loaders.py
src/marketing_swarm/llm/: gateway.py  providers.py
src/marketing_swarm/memory/: base.py  episodic.py  manager.py  procedural.py  semantic.py  working.py
tests/: conftest.py
tests/e2e/: test_eval_gate.py
tests/integration/: test_orchestration.py
tests/unit/: test_agents.py  test_dashboard_backend.py  test_knowledge.py  test_langgraph_runtime.py  test_memory.py  test_retrieval.py  test_tools.py
(+64 files in other folders)
