[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-marketing-swarm"
version = "0.1.0"
description = "Local-first multi-agent marketing automation platform with LangGraph orchestration, RAG, memory, evals, and HITL."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shake MD Tareq Hasan" }]
license = { text = "MIT" }
keywords = ["agents", "marketing", "rag", "local-first", "automation"]
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "rank-bm25>=0.2",
  "chromadb>=0.5",
  "langgraph>=0.2",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "coverage>=7", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
marketing-swarm = "marketing_swarm.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  ".git",
  ".ruff_cache",
  ".pytest_tmp",
  "data",
  "test_artifacts",
  "scripts/generate_project.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that exercise multiple layers",
  "e2e: end-to-end campaign tests",
  "local_model: requires a local model runtime",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
